samples/_failures_safe/1761341866_fca4b2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c5a56b1b.c: In function ‘main’:
./samples/SAFE/__tmp_c5a56b1b.c:153:28: error: missing terminating " character
  153 |                     printf("Error
      |                            ^~~~~~
./samples/SAFE/__tmp_c5a56b1b.c:153:21: error: expected expression at end of input
  153 |                     printf("Error
      |                     ^~~~~~
./samples/SAFE/__tmp_c5a56b1b.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c5a56b1b.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c5a56b1b.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c5a56b1b.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c5a56b1b.c:153:21: error: expected declaration or statement at end of input
